--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 <head> 
     <meta charset="UTF-8" />
     <title>FANDOM</title>
+    <script src="lib/jquery-1.11.1.min.js" 
+            type="text/javascript"></script>
     <script type="text/javascript" src="lib/phaser.min.js"></script>
     <script type="text/javascript" src="assets/audiojson.js"></script>
     <script type="text/javascript" src="lib/socket.io-1.0.6.js"></script>  
