fixed port changes for OpenShift, correctly this time

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,16 @@
         body {
             margin: 0;
         }
+        #loading {
+            margin-top: 100px;
+            color: green;
+            margin-left: 50px;
+        }
     </style>
 </head>
 <body>
 
-
+    <p id="loading"> Trying to connect to server ... </p>
     <script type="text/javascript" src="js/netcode.js"></script>
     <script type="text/javascript" src="js/main.js"></script>
 
